# spin-contrib-http

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
examples/cors-usage/: Cargo.toml  README.md  spin.toml
examples/cors-usage/src/: lib.rs
src/: cookies.rs  cors.rs  lib.rs  request.rs  response.rs
src/cors/: config.rs  cors.rs  mod.rs  responsebuilder.rs  router.rs
src/response/: cookies.rs  cors.rs  mod.rs  response.rs
