[package]
name = "spin-contrib-http"
version = "0.0.2"
description = "Bunch of helpers for building HTTP services using Fermyon Spin"
authors = ["Thorsten Hans <thorsten.hans@gmail.com>"]
repository = "https://github.com/ThorstenHans/spin-contrib-http"
license = "MIT"
license_file = "LICENSE.txt"
keywords = ["spin", "wasm", "wasi", "webassembly"]
readme = "README.md"
edition = "2021"

[lib]
name = "spin_contrib_http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
anyhow = "1"
bytes = "1"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
quote = "1.0"
