[package]
name = "spin-contrib-http"
version = "0.0.6"
description = "Bunch of helpers for building HTTP services using Fermyon Spin"
authors = ["Thorsten Hans <thorsten.hans@gmail.com>"]
repository = "https://github.com/ThorstenHans/spin-contrib-http"
homepage = "https://github.com/ThorstenHans/spin-contrib-http"
license = "MIT"
keywords = ["spin", "wasm", "wasi", "webassembly"]
readme = "README.md"
edition = "2021"

[lib]
name = "spin_contrib_http"

[dependencies]
anyhow = "1"
http = "1.1.0"
spin-sdk = "3.0.1"
